force-app/main/default/objects/relax__Job__c/relax__Job__c.object-meta.xml
<CustomObject>
    <description>A batchable Job for Relax to asynchronously execute on a given schedule.</description>
    <label>Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>