force-app/main/default/objects/relax__Job__c/fields/relax__Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>relax__Apex_Class__c</fullName>
    <description>The name of the Apex Class that this Job will invoke. Must either implement Schedulable (for individually-scheduled Jobs) or relax.BatchableProcessStep (for aggregable Jobs, which Relax can run as part of an ordered sequence)</description>
    <label>Apex Class</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>