force-app/main/default/objects/relax__Job__c/fields/relax__AsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>relax__AsyncApexJobId__c</fullName>
    <description>The Id of the AsyncApexJob, if any, which is currently executing for this Job.</description>
    <label>Current Apex Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>