force-app/main/default/objects/relax__Job__c/fields/relax__Cron_Schedule__c.field-meta.xml
<CustomField>
    <fullName>relax__Cron_Schedule__c</fullName>
    <description>For Jobs that need to be Run Individually, a CRON schedule dictating when the Job should be run must be provided.</description>
    <inlineHelpText>For Jobs that need to be Run Individually, a CRON schedule dictating when the Job should be run must be provided.</inlineHelpText>
    <label>Cron Schedule</label>
    <length>120</length>
    <type>Text</type>
</CustomField>