force-app/main/default/objects/relax__Job__c/fields/relax__CronTriggerId__c.field-meta.xml
<CustomField>
    <fullName>relax__CronTriggerId__c</fullName>
    <description>The Id of the CronTrigger Job, if any, currently executing this Job.</description>
    <label>Current Scheduled Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>