force-app/main/default/objects/relax__Job__c/fields/relax__Delete_Job_After_Run__c.field-meta.xml
<CustomField>
    <fullName>relax__Delete_Job_After_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in conjunction with &quot;Only Run Once&quot;. If checked, this Job will be deleted after it is first run.</description>
    <inlineHelpText>Used in conjunction with &quot;Only Run Once&quot;. If checked, this Job will be deleted after it is first run.</inlineHelpText>
    <label>Delete Job After Run</label>
    <type>Checkbox</type>
</CustomField>