force-app/main/default/objects/relax__Job__c/fields/relax__IsActive__c.field-meta.xml
<CustomField>
    <fullName>relax__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only active Jobs will be considered by the Relax scheduler.</description>
    <inlineHelpText>Only active Jobs will be considered by the Relax scheduler.</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>