force-app/main/default/objects/relax__Job__c/fields/relax__JobSchedulerId__c.field-meta.xml
<CustomField>
    <fullName>relax__JobSchedulerId__c</fullName>
    <description>The Id of the currently-scheduled Relax Job Scheduler process</description>
    <inlineHelpText>The Id of the currently-scheduled Relax Job Scheduler process</inlineHelpText>
    <label>Job Scheduler Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>