force-app/main/default/objects/relax__Job__c/fields/relax__Last_Run__c.field-meta.xml
<CustomField>
    <fullName>relax__Last_Run__c</fullName>
    <description>The last time that this Job was run</description>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>