force-app/main/default/objects/relax__Job__c/fields/relax__Next_Run__c.field-meta.xml
<CustomField>
    <fullName>relax__Next_Run__c</fullName>
    <description>The next time that this Job should be run.</description>
    <inlineHelpText>The next time that this Job should be run.</inlineHelpText>
    <label>Next Run</label>
    <type>DateTime</type>
</CustomField>