force-app/main/default/objects/relax__Job__c/fields/relax__Only_Run_Once__c.field-meta.xml
<CustomField>
    <fullName>relax__Only_Run_Once__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then this Job will only be run once, at which point it will be made in-active.</description>
    <inlineHelpText>If checked, then this Job will only be run once, at which point it will be made in-active.</inlineHelpText>
    <label>Only Run Once</label>
    <type>Checkbox</type>
</CustomField>