force-app/main/default/objects/relax__Job__c/fields/relax__Order__c.field-meta.xml
<CustomField>
    <fullName>relax__Order__c</fullName>
    <description>Used for sequencing piggybacked jobs</description>
    <inlineHelpText>If this Job runs at the same time as another, Order determines which Job will execute when.</inlineHelpText>
    <label>Order</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>