force-app/main/default/objects/relax__Job__c/fields/relax__Parameters__c.field-meta.xml
<CustomField>
    <fullName>relax__Parameters__c</fullName>
    <description>Additional run parameters to be sent in to this Job as a string (i.e. JSON)</description>
    <inlineHelpText>Additional parameters to be passed in to this Job&apos;s Apex Class as a string. Could be comma-separated record ids, JSON, XML, whatever you want to use within your class.</inlineHelpText>
    <label>Parameters (optional)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>