force-app/main/default/objects/relax__Job__c/fields/relax__Run_Increment__c.field-meta.xml
<CustomField>
    <fullName>relax__Run_Increment__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Run Increment</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>