force-app/main/default/objects/relax__Job__c/fields/relax__Run_Individually__c.field-meta.xml
<CustomField>
    <fullName>relax__Run_Individually__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, a dedicated Scheduled Apex Job will be allocated to this Job. Otherwise, Relax will attempt to piggyback this Job onto others.</description>
    <inlineHelpText>If true, a dedicated Scheduled Apex Job will be allocated to this Job. Otherwise, Relax will attempt to piggyback this Job onto others.</inlineHelpText>
    <label>Run Individually</label>
    <type>Checkbox</type>
</CustomField>