force-app/main/default/objects/relax__Job__c/fields/relax__Run_Units__c.field-meta.xml
<CustomField>
    <fullName>relax__Run_Units__c</fullName>
    <label>Run Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
                <default>true</default>
                <label>Days</label>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>