force-app/main/default/objects/relax__Job__c/validationRules/relax__Individual_Jobs_Require_CRON_Schedule.validationRule-meta.xml
<ValidationRule>
    <fullName>relax__Individual_Jobs_Require_CRON_Schedule</fullName>
    <active>true</active>
    <description>Any Job with Run Individually set to true must have a valid CRON Schedule specified.</description>
    <errorConditionFormula>AND(
relax__Run_Individually__c,
ISBLANK(relax__Cron_Schedule__c)
)</errorConditionFormula>
    <errorDisplayField>relax__Cron_Schedule__c</errorDisplayField>
    <errorMessage>A valid CRON Schedule must be specified for a Job to be run individually.</errorMessage>
</ValidationRule>