force-app/main/default/objects/relax__Job__c/validationRules/relax__Next_Run_After_Last_Run.validationRule-meta.xml
<ValidationRule>
    <fullName>relax__Next_Run_After_Last_Run</fullName>
    <active>true</active>
    <description>You cannot update Next Run to be before Last Run</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(relax__Last_Run__c)),
NOT(ISBLANK(relax__Next_Run__c)),
OR(ISCHANGED(relax__Next_Run__c),ISCHANGED(relax__Last_Run__c)),
relax__Next_Run__c &lt;= relax__Last_Run__c
)</errorConditionFormula>
    <errorMessage>Next Run must be after Last Run.</errorMessage>
</ValidationRule>