force-app/main/default/objects/relax__Job__c/validationRules/relax__Run_Increment_Greater_or_Equal_to_1.validationRule-meta.xml
<ValidationRule>
    <fullName>relax__Run_Increment_Greater_or_Equal_to_1</fullName>
    <active>true</active>
    <description>Run Increment must be greater than or equal to 1</description>
    <errorConditionFormula>AND(
NOT(relax__Run_Individually__c),
OR(
ISBLANK(relax__Run_Increment__c),
relax__Run_Increment__c &lt; 1
)
)</errorConditionFormula>
    <errorDisplayField>relax__Run_Increment__c</errorDisplayField>
    <errorMessage>Run Increment must be at least 1.</errorMessage>
</ValidationRule>